<resources>
    <string name="crash_toast_text">An error occurred! Crash report sent.</string>
    <string name="action_report">Report a Microaggression</string>
    <string name="action_gethelp">Get Help</string>
    <string name="action_feedback">Give Feedback</string>
    <string name="action_webpage">Study Website</string>
    <string name="action_clear">Refresh Map</string>
    <string name="action_bulletin">Good News</string>
    <string name="drawer_open">Navigation Open</string>
    <string name="drawer_close">Navigation Closed</string>
    <string name="navigation">Navigation</string>
    <string-array name="menu">
        <item>Home</item>
        <item>Good News</item>
        <item>Get Help</item>
        <item>Give Feedback</item>
        <item>Study Website (external)</item>
    </string-array>
    <string name="app_name">MicroReport</string>
    <string name="title_activity_help">Resources</string>
    <string name="title_activity_feedback">Give Feedback</string>
    <string name="sort_A">Sort Ascending</string>
    <string name="sort_D">Sort Descending</string>
    <string name="my_reports">Reports</string>
    <string name="title_activity_report">Submit a Report</string>
    <string name="reporthead">Enter the details of the microaggression here.</string>
    <string name="happenedto">Happened to:</string>
    <string name="happenedtoyou">You</string>
    <string name="happenedtoelse">Someone else</string>
    <string name="when">When:</string>
    <string name="justnow">Just now, or: </string>
    <string name="othertime">Other time:</string>
    <string name="whatclass">What class or event:</string>
    <string name="whathappened">What happened:</string>
    <string name="describehint">Describe what happened (who was involved (no names), what did they do, how did you feel?)</string>
    <string name="describehint2">Describe what happened</string>
    <string name="location">Location (select <i>Use current location</i>, select a building, or enter a location):</string>
    <string name="usecurrentlocation">Use current location</string>
    <string name="otherlocation">Class name or other location</string>
    <string name="button_preview">Preview Report</string>
    <string name="cancel">Cancel</string>
    <string name="bother">How much did it bother you?</string>
    <string name="not_at_all">Not at all</string>
    <string name="very_much">Very much</string>
    <string name="related_to">Was it related to your...?</string>
    <string name="race">race</string>
    <string name="culture">culture</string>
    <string name="gender">gender</string>
    <string name="sexual_orientation">sexual orientation</string>
    <string name="something_else">something else</string>
    <string name="title_activity_confirm_report">Confirm Report</string>
    <string name="confirmheader">Submit this report?</string>
    <string name="reportdraft">Draft report here</string>
    <string name="okbutton">Submit</string>
    <string name="backbutton">Go Back</string>
    <string name="settings">Settings</string>
    <string name="resources">
        <h1><b>Resources</b></h1>
        \n\n<i><b>In an emergency, or if you see a crime in progress, call 911.</b></i>
        \n\nThis app is designed to aid in reporting microaggressions as an educational and supportive resource. If you would like a response from authorities about an incident, go to http://reporthate.ucsc.edu and submit a hate/bias report.
        \n\n<b>Police Non-Emergency</b> (831) 459-2231
        \n<b>Anonymous Tip Line</b> (831) 459-3TIP
        \n<b>Campus Advocacy, Resources and Education</b> care.ucsc.edu (831) 502-CARE(2273) care@ucsc.edu
        \n<b>Counseling and Psychological Services</b> (831) 459-2628
    \n<b>Cantu GLBTI Resource Center</b> (831) 459-2468 queer@ucsc.edu
    \n<b>Disability Resource Center</b> (831) 459-2089 drc@ucsc.edu
    \n<b>Ethnic Resource Centers</b>     \n     AARCC (831) 459-2427 aarcc@ucsc.edu
    \n     AIRC (831)459-5999 airc@ucsc.edu
    \n     AAPIRC (831) 459-2427 aapirc@ucsc.edu
    \n     El Centro (831) 459-2427
    \n<b>Student Health Center</b> (831) 459-2211; Appointment Scheduling (831) 459-2500 healthcenter@ucsc.edu
    \n<b>Student Services Main Office</b> (831) 459-4446 studentservices@ucsc.edu
        \n\n<h1><b>MicroReport User Guide</b></h1>
        \nAndroid Version 2.0
        \nPDF version: http://people.ucsc.edu/~cmbyrd/AndroidUserGuide.pdf
\n\nMicroReport is a mobile app that allows community members to report microaggressions they experience and to view reports of others. Microaggressions are subtle slights and indignities based on an identity like race, gender, or sexual orientation. MicroReport provides a way for individuals to better cope with and understand microaggressions.
\n\n<b>Registration</b>
\nThe first time you open MicroReport after installing or re-installing it, you will be asked to register your device. Your name and email address are required. This information is stored on a password-protected server that only the research team has access to. Reports are displayed with no identifying information. If you are re-installing the app, you should use the same email address and select \"Register New Device\" when prompted.
\n\n<b>Home</b>
\nThe home screen displays the map of microaggressions in your community. You can zoom in and out using pinch gestures and pan using swipes to see different parts of the map. A large number of reports in one area will cluster if you zoom out.
\n\nClick on a marker  to read the report from that location. In landscape view, you can see a list of all the reports and click on an item to pan to that marker on the map. You can also filter the reports.
\n\nTap the refresh icon  to update the map at any time.
\n\nClick the New Report button  to submit a microaggression report.
\n\n<b>Submitting a Report</b>
\nIn the description field, say what happened, who was involved (without giving any names or identifying information) and how you felt about it.
\n\nIf you have your location turned on, you can click the \"Use current location\" checkbox to automatically record your location. Otherwise, use the drop-down menu to select a building on campus or type in the name of another location.
\n\nIf you don\'t use your location or select a building, your report will automatically appear at the center of campus.
\n\nOptionally, tell us what identities you think the microaggression was related to and how much the incident bothered you.
\n\nClick \"Submit\" to post your report to the map. Your report will be immediately visible.
\n\n<b>Navigation</b>
\nSwipe from the left side of the screen or click the navigation icon  in the top left to open the navigation menu. Click on a screen name to go to that screen.
\n\n<b>Good News</b>
\nThe Good News page features study updates and submitted content. Click on an item to read the full post in your web browser. You can submit resources and affirmations to the research team at microreport-goodnews-group@ucsc.edu.
\n\nWe\'ll post:
\n* Campus events
\n* Local events
\n* Information about supportive or interesting resources
\n* Affirmations and positive messages
\n\nWe will not post news articles, promotions for commercial services, neutral or negative posts, or any information that could identify an individual.
\n\n<b>Notifications</b>
\nAbout once a day, MicroReport will check for new Good News and notify you if there are any updates. You can disable notifications by going to Settings | Apps | MicroReport and unchecking the box that says \"Show notifications\".
\n\n<b>Get Help</b>
\nThis page is a list of campus resources if you need support.
\n\n<b>Give Feedback</b>
\nUse this form to send us any feedback about the study or the app.
\n\n<b>Study Website</b>
\nThis will take you to the main website for the study in your web browser.
\n\n<b>End User License Agreement</b>
\nhttp://people.ucsc.edu/~cmbyrd/MicroReport_EULA.html
        \n\nNotification icon made by Freepik (www.freepik.com) from www.flaticon.com is licensed under Creative Commons BY 3.0
    </string>
    <string name="feedback"><b>Report bugs or an error message, or give any other feedback</b></string>
    <string name="feedback_hint">Enter feedback here</string>
    <string name="title_activity_login">Register Device</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_name">First name</string>
    <string name="action_sign_in">Register</string>
    <string name="registerhead"><b>Register Your Device</b></string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="finish_button">Finish</string>
    <string name="new_device_button">Register New Device</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">MicroReport Background Notification Service</string>
    <string name="good_news">Send us your good news and affirmations at microreport-goodnews-groups@ucsc.edu. You can submit interesting events and resources from on and off campus as well as post affirmations and other positive messages. We\'ll also use this space to keep you updated about the study.</string>
</resources>