<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/report"
    android:background="@color/ucsc_blue_very_light"
    android:paddingTop="0dp"
    >
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ReportActivity"
    android:background="@color/ucsc_blue_very_light"
    android:orientation="vertical"
    >
    <EditText android:id="@+id/description"
        android:hint="@string/describehint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <CheckBox
        android:id="@+id/currentlocationcheckbox"
        android:checked="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="useCurrentLocation"
        android:text="@string/usecurrentlocation"
        android:contentDescription="@string/usecurrentlocation"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>
        <ImageView
            android:id="@+id/location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_off_black_24dp"/>
        </LinearLayout>
    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        />
    <EditText android:id="@+id/locationtextbox"
        android:hint="@string/otherlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/related_to"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="12dp">
        <CheckBox
            android:id="@+id/race_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race"
            android:contentDescription="@string/race"
            android:textSize="16sp"
            />
        <CheckBox
            android:id="@+id/culture_check"
            android:layout_toRightOf="@+id/race_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/culture"
            android:contentDescription="@string/culture"
            android:textSize="16sp"
            />
        <CheckBox
            android:id="@+id/gender_check"
            android:layout_toRightOf="@+id/culture_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:contentDescription="@string/gender"
            android:textSize="16sp"
            />
        <CheckBox
            android:id="@+id/sexual_orientation_check"
            android:layout_below="@+id/race_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexual_orientation"
            android:contentDescription="@string/sexual_orientation"
            android:textSize="16sp"
            />
        <CheckBox
            android:id="@+id/else_check"
            android:layout_below="@+id/sexual_orientation_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_else"
            android:contentDescription="@string/something_else"
            android:textSize="16sp"
            />
        </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bother"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="12dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/not_at_all"
            android:textSize="12sp"/>
        <SeekBar
            android:id="@+id/bother_seek"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/very_much"
            android:textSize="12sp"/>
        </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:contentDescription="@string/cancel"
            android:background="@color/ucsc_blue_very_light"
            android:textColor="@color/ucsc_blue"
            />
        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/okbutton"
            android:contentDescription="@string/okbutton"
            android:background="@color/ucsc_blue_very_light"
            android:textColor="@color/ucsc_blue"
            />
    </LinearLayout>
    </LinearLayout>
</ScrollView>

