<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_report"
        android:title="@string/action_report"
        android:contentDescription="@string/action_report"
        android:icon="@drawable/ic_action_place"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_gethelp"
        android:title="@string/action_gethelp"
        android:contentDescription="@string/action_gethelp"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="200"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:contentDescription="@string/action_feedback"
        android:icon="@drawable/ic_action_error"
        android:orderInCategory="300"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_webpage"
        android:title="@string/action_webpage"
        android:contentDescription="@string/action_webpage"
        android:orderInCategory="400"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>
