<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingTop="?android:attr/actionBarSize"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ucsc.psyc_files.microreport.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:id="@+id/header" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:text="@string/registerhead"
                android:contentDescription="@string/registerhead"
                style="@android:style/TextAppearance.Large" android:paddingTop="10dp"/>

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" android:contentDescription="@string/prompt_email" />

            <EditText android:id="@+id/fname" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_name"
                android:imeActionId="@+id/login" android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textNoSuggestions"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold" android:contentDescription="@string/action_sign_in"/>

            <TextView android:id="@+id/result" android:layout_width="match_parent"
                android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium"
                android:paddingTop="10dp"/>

            <Button android:id="@+id/finish_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/finish_button"
                android:textStyle="bold" android:contentDescription="@string/finish_button"
                android:visibility="gone"/>

            <Button android:id="@+id/new_device_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/new_device_button"
                android:textStyle="bold" android:contentDescription="@string/new_device_button"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>



