<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/UCSCBlue">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ucsc.psyc_files.microreport.ConfirmReport"
    >

    <TextView
        android:id="@+id/reportheader"
        android:text="@string/confirmheader"
        android:contentDescription="@string/confirmheader"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/reportdraft"
        android:text="@string/reportdraft"
        android:layout_below="@id/reportheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@android:style/TextAppearance.Medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/backbutton"
        android:text="@string/backbutton"
        android:contentDescription="@string/backbutton"
        android:layout_below="@id/reportdraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goBack"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>
    <Button
        android:id="@+id/okbutton"
        android:text="@string/okbutton"
        android:contentDescription="@string/okbutton"
        android:layout_toRightOf="@id/backbutton"
        android:layout_below="@id/reportdraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="okReportSubmit"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="5dp"/>
</RelativeLayout>
</ScrollView>