<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/UCSCBlue">
    <TextView
        android:id="@+id/reporthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:background="@color/ucsc_blue"
        style="@android:style/TextAppearance.Large"
        android:padding="4dp"
        android:text="@string/reporthead"
        android:contentDescription="@string/reporthead"
        />
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Medium"
        android:background="@color/ucsc_blue_light"
        android:textColor="@android:color/white"
        android:padding="4dp"
        android:hint="@string/describehint"
        android:contentDescription="@string/describehint"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <ImageButton
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/ucsc_blue"
        android:contentDescription="Location"
        android:onClick="chooseLocation"
        android:src="@drawable/ic_action_place"
        />
        <ImageButton
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/ucsc_blue"
            android:contentDescription="Tags"
            android:onClick="tag"
            />
        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_preview"
            android:contentDescription="@string/button_preview"
            android:background="@color/ucsc_blue"
            android:onClick="submitReport"
            />
    </LinearLayout>
</LinearLayout>