<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/UCSCBlue">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ucsc.psyc_files.microreport.FeedbackActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:text="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Medium"
        android:gravity="center_horizontal"
        android:contentDescription="@string/feedback"/>
    <EditText
        android:id="@+id/feedbacktext"
        android:contentDescription="@string/feedback_hint"
        android:hint="@string/feedback_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:lines="3"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/submitfeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okbutton"
        android:contentDescription="@string/okbutton"
        android:onClick="submitFeedback"
        android:gravity="center_horizontal"
        />

</LinearLayout>
    </ScrollView>
    <ListView
        android:id="@+id/navigation_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@android:color/white"
        android:paddingTop="?android:attr/actionBarSize"
        ></ListView>
</android.support.v4.widget.DrawerLayout>
